# triton-linalg

./: .gitignore  ACKNOWLEDGMENTS  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  triton_linalg.cc
.github/ci_script/: combine_log.py  file_guard.py  triton-linalg-ci_script.sh
.github/workflows/: triton-linalg_ci.yaml
backend/: compiler.py  name.conf
include/: CMakeLists.txt
include/triton-linalg/: CMakeLists.txt  RegisterTritonLinalgDialects.h  RegisterTritonLinalgPasses.h
include/triton-linalg/Analysis/: AxisInfoAnalysis.h  Utils.h
include/triton-linalg/Conversion/: CMakeLists.txt  PassDetail.h  Passes.h  Passes.td
include/triton-linalg/Dialect/: CMakeLists.txt
include/triton-linalg/Interfaces/: CMakeLists.txt  InferAxisInfoInterface.h  (+3 more)
lib/: CMakeLists.txt
lib/Analysis/: AxisInfoAnalysis.cpp  CMakeLists.txt  Utils.cpp
lib/Conversion/: CMakeLists.txt
lib/Dialect/: CMakeLists.txt
lib/Interfaces/: CMakeLists.txt  InferAxisInfoInterface.cpp  InferResultTypeOpInterface.cpp
lib/Pipelines/: CMakeLists.txt  Pipelines.cpp
lib/Transforms/: CanonicalizeTriton.cpp  ExtractMoveBackward.cpp  InferAxisInfoInterfaceImpl.cpp  PointerStrengthReduction.cpp  WrapFuncBodyWithSingleBlock.cpp
lib/Utils/: CMakeLists.txt  MaskTracker.cpp  OpFoldResultUtils.cpp  PointerMetaInfoTracker.cpp  Utils.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Conversion/: arith-to-linalg.mlir  load.mlir  math-to-linalg.mlir  triton-to-linalg.mlir  triton-to-tensor.mlir
test/Pipelines/: pipeline.mlir
tools/scripts/: test_triton-linalg.sh
(+142 files in other folders)
